--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.19.0",
+    "@headlessui/react": "^2.1.8",
+    "@radix-ui/react-icons": "^1.3.0",
     "axios": "^1.7.7",
     "html2canvas": "^1.4.1",
+    "lucide-react": "^0.441.0",
     "mermaid": "^11.2.0",
     "puppeteer": "^23.3.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-html-parser": "^2.0.2",
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
