--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^2.1.8",
     "@radix-ui/react-icons": "^1.3.0",
     "axios": "^1.7.7",
+    "firebase": "^10.13.1",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.441.0",
     "mermaid": "^11.2.0",
@@ -22,7 +23,8 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-html-parser": "^2.0.2",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
