--- a/package.json
+++ b/package.json
@@ -14,17 +14,24 @@
     "@headlessui/react": "^2.1.8",
     "@radix-ui/react-icons": "^1.3.0",
     "axios": "^1.7.7",
+    "dompurify": "^3.1.7",
     "firebase": "^10.13.1",
+    "framer-motion": "^11.8.0",
+    "html-entities": "^2.5.2",
     "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.441.0",
     "mermaid": "^11.2.0",
     "puppeteer": "^23.3.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
     "react-html-parser": "^2.0.2",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "react-toastify": "^10.0.5",
+    "rollup-plugin-polyfill-node": "^0.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
